# product-service/src/routes/dto/update-review-status.dto.ts
@@ -1,0 +1,7 @@
+import { IsEnum } from 'class-validator';
+import { ReviewStatus } from '../../db/enums/review-status.enum';
+
+export class UpdateReviewStatusDto {
+  @IsEnum(ReviewStatus)
+  status: ReviewStatus;
+}
